--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,17 @@
         visibility: hidden;
         display: none;
     }
+    .nav-create {
+        width: 100%;
+        margin-top: 10px;
+    }
 }
 
 @media (min-width: 768px){
-    .a-search-collapse {
+    /* .a-search-collapse {
         height: 350px;
-    }
+    } */
+
     .register-panel {
         border-left: 1px solid silver;
     }
@@ -36,6 +41,9 @@
         position: relative;
         width: 70%;
         left: 10%;
+    }
+    .nav-create {
+        width: 15%;
     }
     .img-profile {
         padding-top: 170px;
