--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,9 @@
         width: 100%;
         margin-top: 10px;
     }
+    .btn-modal-close {
+        align-self: center;
+    }
 }
 
 @media (min-width: 768px){
@@ -71,6 +74,11 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 255, 255, 0.6);
 }
 
+.search-modal {
+    width: 70%;
+    left: 10%;
+}
+
 .book-item {
     position: relative;
     margin: 4px;
@@ -87,9 +95,8 @@
 }
 
 .user-select:hover {
-    box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3);
 }
-
 
 .text-hidden {
     overflow: hidden;
